--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ subjects:
 - !lcsh 'Shipwrecks -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Sea stories, American'
+- GITenberg
 tableOfContents: The wreck of the Titan -- The pirates -- Beyond the spectrum -- In
   the valley of the shadow.
 title: 'The Wreck of the Titan
